--- a/src/resource/locale.properties
+++ b/src/resource/locale.properties
@@ -18,6 +18,8 @@ locale.name = name
 locale.surname = surname
 locale.email = email
 locale.phone = phone number
+locale.country = country
+locale.city = city
 
 locale.welcome = Welcome
 locale.mesSignUp = Sign up and discover great amount of interesting jobs!
@@ -31,7 +33,15 @@ locale.applicants = Applicants
 
 locale.add = Add
 locale.delete = Delete
+locale.admins = Admins
 
 
+locale.apply = Apply
 
+locale.passerr = Password should be between 6 and 25 characters and include at least one capital letter and number
+
+locale.title = Title
+locale.description = Description
+
+locale.update = Update
 
